# routes/orderRoutes.js
@@ -4,5 +4,5 @@ const { verifyUserRole } = require("../controllers/cartController");
 const { placeOrder, getOrder } = require("../controllers/orderController");
 
 router.route("/:userid/placeOrder").post(verifyUserRole, placeOrder);
-router.route("/:userid/getOrder").get(getOrder);
+router.route("/:userid/showOrder").get(getOrder);
 module.exports = router;
